@@ -132,6 +132,7 @@ public class Locations {
     Map<Path, FileSystem> fileSystems = new LinkedHashMap<>();
     List<Closeable> closeables = new ArrayList<>();
     private String releaseVersion = null;
+    private boolean previewMode = false;
 
     Locations() {
         initHandlers();
@@ -156,7 +157,7 @@ public class Locations {
         });
         if (list.nonEmpty()) {
             IOException ex = new IOException();
-            for (IOException e: list)
+            for (IOException e : list)
                 ex.addSuppressed(e);
             throw ex;
         }
@@ -205,7 +206,7 @@ public class Locations {
      */
     private Iterable<Path> getPathEntries(String searchPath, Path emptyPathDefault) {
         ListBuffer<Path> entries = new ListBuffer<>();
-        for (String s: searchPath.split(Pattern.quote(File.pathSeparator), -1)) {
+        for (String s : searchPath.split(Pattern.quote(File.pathSeparator), -1)) {
             if (s.isEmpty()) {
                 if (emptyPathDefault != null) {
                     entries.add(emptyPathDefault);
@@ -224,6 +225,11 @@ public class Locations {
     public void setMultiReleaseValue(String multiReleaseValue) {
         // Null is implicitly allowed and unsets the value.
         this.releaseVersion = multiReleaseValue;
+    }
+
+    public void setPreviewMode(boolean previewMode) {
+        // Null is implicitly allowed and unsets the value.
+        this.previewMode = previewMode;
     }
 
     private boolean contains(Collection<Path> searchPath, Path file) throws IOException {
@@ -368,13 +374,13 @@ public class Locations {
 
             if (fsInfo.isFile(file)) {
                 /* File is an ordinary file. */
-                if (   !file.getFileName().toString().endsWith(".jmod")
-                    && !file.endsWith("modules")) {
+                if (!file.getFileName().toString().endsWith(".jmod")
+                        && !file.endsWith("modules")) {
                     if (!isArchive(file)) {
                         /* Not a recognized extension; open it to see if
                          it looks like a valid zip file. */
                         try {
-                            FileSystems.newFileSystem(file, (ClassLoader)null).close();
+                            FileSystems.newFileSystem(file, (ClassLoader) null).close();
                             if (warn) {
                                 log.warning(LintWarnings.UnexpectedArchiveFile(file));
                             }
@@ -388,7 +394,7 @@ public class Locations {
                     } else {
                         if (fsInfo.getJarFSProvider() == null) {
                             log.error(Errors.NoZipfsForArchive(file));
-                            return ;
+                            return;
                         }
                     }
                 }
@@ -472,7 +478,7 @@ public class Locations {
         /**
          * @see JavaFileManager#getLocationForModule(Location, JavaFileObject)
          */
-        Location getLocationForModule(Path file) throws IOException  {
+        Location getLocationForModule(Path file) throws IOException {
             return null;
         }
 
@@ -908,7 +914,7 @@ public class Locations {
                 path.addDirectories(extdirsOpt);
             } else {
                 // Add lib/jfxrt.jar to the search path
-               Path jfxrt = javaHome.resolve("lib/jfxrt.jar");
+                Path jfxrt = javaHome.resolve("lib/jfxrt.jar");
                 if (Files.exists(jfxrt)) {
                     path.addFile(jfxrt, false);
                 }
@@ -916,9 +922,9 @@ public class Locations {
             }
 
             isDefault =
-                       (xbootclasspathPrependOpt == null)
-                    && (bootclasspathOpt == null)
-                    && (xbootclasspathAppendOpt == null);
+                    (xbootclasspathPrependOpt == null)
+                            && (bootclasspathOpt == null)
+                            && (xbootclasspathAppendOpt == null);
 
             return path;
         }
@@ -981,7 +987,7 @@ public class Locations {
         Collection<Path> searchPath;
 
         ModuleLocationHandler(LocationHandler parent, String name, String moduleName,
-                Collection<Path> searchPath, boolean output) {
+                              Collection<Path> searchPath, boolean output) {
             this.parent = parent;
             this.name = name;
             this.moduleName = moduleName;
@@ -989,22 +995,26 @@ public class Locations {
             this.output = output;
         }
 
-        @Override @DefinedBy(Api.COMPILER)
+        @Override
+        @DefinedBy(Api.COMPILER)
         public String getName() {
             return name;
         }
 
-        @Override @DefinedBy(Api.COMPILER)
+        @Override
+        @DefinedBy(Api.COMPILER)
         public boolean isOutputLocation() {
             return output;
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         boolean handleOption(Option option, String value) {
             throw new UnsupportedOperationException();
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         Collection<Path> getPaths() {
             return Collections.unmodifiableCollection(searchPath);
         }
@@ -1014,18 +1024,21 @@ public class Locations {
             return true;
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         void setPaths(Iterable<? extends Path> paths) throws IOException {
             // defer to the parent to determine if this is acceptable
             parent.setPathsForModule(moduleName, paths);
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         void setPathsForModule(String moduleName, Iterable<? extends Path> paths) {
             throw new UnsupportedOperationException("not supported for " + name);
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         String inferModuleName() {
             return moduleName;
         }
@@ -1058,7 +1071,7 @@ public class Locations {
         void updatePaths(ModuleLocationHandler h) {
             // use iterator, to be able to remove old entries
             for (Iterator<Map.Entry<Path, ModuleLocationHandler>> iter = pathMap.entrySet().iterator();
-                    iter.hasNext(); ) {
+                 iter.hasNext(); ) {
                 Map.Entry<Path, ModuleLocationHandler> e = iter.next();
                 if (e.getValue() == h) {
                     iter.remove();
@@ -1105,10 +1118,10 @@ public class Locations {
 
         Set<Location> explicitLocations() {
             return Collections.unmodifiableSet(nameMap.entrySet()
-                                                      .stream()
-                                                      .filter(e -> e.getValue().explicit)
-                                                      .map(e -> e.getValue())
-                                                      .collect(Collectors.toSet()));
+                    .stream()
+                    .filter(e -> e.getValue().explicit)
+                    .map(e -> e.getValue())
+                    .collect(Collectors.toSet()));
         }
     }
 
@@ -1158,8 +1171,8 @@ public class Locations {
             Iterable<Set<Location>> searchPathLocations =
                     () -> new ModulePathIterator();
             return () -> Iterators.createCompoundIterator(Arrays.asList(explicitLocationsList,
-                                                                        searchPathLocations),
-                                                          Iterable::iterator);
+                            searchPathLocations),
+                    Iterable::iterator);
         }
 
         @Override
@@ -1173,7 +1186,7 @@ public class Locations {
         @Override
         void setPaths(Iterable<? extends Path> paths) {
             if (paths != null) {
-                for (Path p: paths) {
+                for (Path p : paths) {
                     checkValidModulePathEntry(p);
                 }
             }
@@ -1192,7 +1205,7 @@ public class Locations {
                 l = new ModuleLocationHandler(this, location.getName() + "[" + name + "]",
                         name, checkedPaths, true);
                 moduleTable.add(l);
-           } else {
+            } else {
                 l.searchPath = checkedPaths;
                 moduleTable.updatePaths(l);
             }
@@ -1290,7 +1303,7 @@ public class Locations {
                 Set<Path> paths = new LinkedHashSet<>();
                 Path moduleInfoClass = null;
                 try (DirectoryStream<Path> stream = Files.newDirectoryStream(path)) {
-                    for (Path entry: stream) {
+                    for (Path entry : stream) {
                         if (entry.endsWith("module-info.class")) {
                             moduleInfoClass = entry;
                             break;  // no need to continue scanning
@@ -1327,7 +1340,7 @@ public class Locations {
                 Set<Location> result = new LinkedHashSet<>();
                 int index = 0;
                 for (Path entry : paths) {
-                    Pair<String,Path> module = inferModuleName(entry);
+                    Pair<String, Path> module = inferModuleName(entry);
                     if (module == null) {
                         // diagnostic reported if necessary; skip to next
                         continue;
@@ -1345,7 +1358,7 @@ public class Locations {
             }
 
             private Set<Location> scanFile(Path path) {
-                Pair<String,Path> module = inferModuleName(path);
+                Pair<String, Path> module = inferModuleName(path);
                 if (module == null) {
                     // diagnostic reported if necessary
                     return Collections.emptySet();
@@ -1360,10 +1373,10 @@ public class Locations {
                 return Collections.singleton(l);
             }
 
-            private Pair<String,Path> inferModuleName(Path p) {
+            private Pair<String, Path> inferModuleName(Path p) {
                 if (Files.isDirectory(p)) {
                     if (Files.exists(p.resolve("module-info.class")) ||
-                        Files.exists(p.resolve("module-info.sig"))) {
+                            Files.exists(p.resolve("module-info.sig"))) {
                         String name = p.getFileName().toString();
                         if (SourceVersion.isName(name))
                             return new Pair<>(name, p);
@@ -1414,7 +1427,7 @@ public class Locations {
                     //from ModulePath.deriveModuleDescriptor:
 
                     // drop .jar
-                    String mn = fn.substring(0, fn.length()-4);
+                    String mn = fn.substring(0, fn.length() - 4);
 
                     // find first occurrence of -${NUMBER}. or -${NUMBER}$
                     Matcher matcher = Pattern.compile("-(\\d+(\\.|$))").matcher(mn);
@@ -1425,7 +1438,7 @@ public class Locations {
                     }
 
                     // finally clean up the module name
-                    mn =  mn.replaceAll("[^A-Za-z0-9]", ".")  // replace non-alphanumeric
+                    mn = mn.replaceAll("[^A-Za-z0-9]", ".")  // replace non-alphanumeric
                             .replaceAll("(\\.)(\\1)+", ".")   // collapse repeating dots
                             .replaceAll("^\\.", "")           // drop leading dots
                             .replaceAll("\\.$", "");          // drop trailing dots
@@ -1499,7 +1512,7 @@ public class Locations {
                 String id = name.substring(off, next);
                 if (!SourceVersion.isName(id))
                     return false;
-                off = next+1;
+                off = next + 1;
             }
             String last = name.substring(off);
             return SourceVersion.isName(last);
@@ -1579,7 +1592,7 @@ public class Locations {
          */
         void initFromPattern(String value) {
             Collection<String> segments = new ArrayList<>();
-            for (String s: value.split(File.pathSeparator)) {
+            for (String s : value.split(File.pathSeparator)) {
                 expandBraces(s, segments);
             }
 
@@ -1587,7 +1600,7 @@ public class Locations {
             List<Path> noSuffixPaths = new ArrayList<>();
             boolean anySuffix = false;
             final String MARKER = "*";
-            for (String seg: segments) {
+            for (String seg : segments) {
                 int markStart = seg.indexOf(MARKER);
                 if (markStart == -1) {
                     Path p = getPath(seg);
@@ -1633,8 +1646,8 @@ public class Locations {
             });
         }
         //where:
-            private final Predicate<Path> checkModuleInfo =
-                    p -> Files.exists(p.resolve("module-info.java"));
+        private final Predicate<Path> checkModuleInfo =
+                p -> Files.exists(p.resolve("module-info.java"));
 
 
         private boolean isSeparator(char ch) {
@@ -1645,12 +1658,12 @@ public class Locations {
         void add(Map<String, List<Path>> map, Path prefix, Path suffix) {
             if (!Files.isDirectory(prefix)) {
                 log.warning(Files.exists(prefix) ?
-                    LintWarnings.DirPathElementNotDirectory(prefix) :
-                    LintWarnings.DirPathElementNotFound(prefix));
+                        LintWarnings.DirPathElementNotDirectory(prefix) :
+                        LintWarnings.DirPathElementNotFound(prefix));
                 return;
             }
             try (DirectoryStream<Path> stream = Files.newDirectoryStream(prefix, path -> Files.isDirectory(path))) {
-                for (Path entry: stream) {
+                for (Path entry : stream) {
                     Path path = (suffix == null) ? entry : entry.resolve(suffix);
                     if (Files.isDirectory(path)) {
                         String name = entry.getFileName().toString();
@@ -1772,7 +1785,7 @@ public class Locations {
                         validPaths,
                         true);
                 moduleTable.add(l);
-           } else {
+            } else {
                 l.searchPath = validPaths;
                 moduleTable.updatePaths(l);
             }
@@ -1872,7 +1885,7 @@ public class Locations {
                         checkedPaths,
                         true);
                 moduleTable.add(l);
-           } else {
+            } else {
                 l.searchPath = checkedPaths;
                 moduleTable.updatePaths(l);
             }
@@ -1950,17 +1963,20 @@ public class Locations {
                     FileSystem jrtfs;
 
                     if (isCurrentPlatform(systemJavaHome)) {
-                        jrtfs = FileSystems.getFileSystem(jrtURI);
+                        JRTIndex jrtIndex = JRTIndex.getInstance(previewMode);
+                        closeables.add(jrtIndex::close);
+                        jrtfs = jrtIndex.getFileSystem();
                     } else {
                         try {
                             Map<String, String> attrMap =
-                                    Collections.singletonMap("java.home", systemJavaHome.toString());
+                                    Map.of("java.home", systemJavaHome.toString(),
+                                            "previewMode", String.valueOf(previewMode));
                             jrtfs = FileSystems.newFileSystem(jrtURI, attrMap);
                         } catch (ProviderNotFoundException ex) {
                             URL jfsJar = resolveInJavaHomeLib(systemJavaHome, "jrt-fs.jar").toUri().toURL();
                             ClassLoader currentLoader = Locations.class.getClassLoader();
                             URLClassLoader fsLoader =
-                                    new URLClassLoader(new URL[] {jfsJar}, currentLoader);
+                                    new URLClassLoader(new URL[]{jfsJar}, currentLoader);
 
                             jrtfs = FileSystems.newFileSystem(jrtURI, Collections.emptyMap(), fsLoader);
 
@@ -2048,7 +2064,8 @@ public class Locations {
             throw new UnsupportedOperationException();
         }
 
-        @Override // defined by LocationHandler
+        @Override
+            // defined by LocationHandler
         void setPathsForModule(String moduleName, Iterable<? extends Path> files) throws IOException {
             throw new UnsupportedOperationException(); // not yet
         }
@@ -2082,19 +2099,19 @@ public class Locations {
         handlersForOption = new EnumMap<>(Option.class);
 
         BasicLocationHandler[] handlers = {
-            new BootClassPathLocationHandler(),
-            new ClassPathLocationHandler(),
-            new SimpleLocationHandler(StandardLocation.SOURCE_PATH, Option.SOURCE_PATH),
-            new SimpleLocationHandler(StandardLocation.ANNOTATION_PROCESSOR_PATH, Option.PROCESSOR_PATH),
-            new SimpleLocationHandler(StandardLocation.ANNOTATION_PROCESSOR_MODULE_PATH, Option.PROCESSOR_MODULE_PATH),
-            new OutputLocationHandler(StandardLocation.CLASS_OUTPUT, Option.D),
-            new OutputLocationHandler(StandardLocation.SOURCE_OUTPUT, Option.S),
-            new OutputLocationHandler(StandardLocation.NATIVE_HEADER_OUTPUT, Option.H),
-            new ModuleSourcePathLocationHandler(),
-            new PatchModulesLocationHandler(),
-            new ModulePathLocationHandler(StandardLocation.UPGRADE_MODULE_PATH, Option.UPGRADE_MODULE_PATH),
-            new ModulePathLocationHandler(StandardLocation.MODULE_PATH, Option.MODULE_PATH),
-            new SystemModulesLocationHandler(),
+                new BootClassPathLocationHandler(),
+                new ClassPathLocationHandler(),
+                new SimpleLocationHandler(StandardLocation.SOURCE_PATH, Option.SOURCE_PATH),
+                new SimpleLocationHandler(StandardLocation.ANNOTATION_PROCESSOR_PATH, Option.PROCESSOR_PATH),
+                new SimpleLocationHandler(StandardLocation.ANNOTATION_PROCESSOR_MODULE_PATH, Option.PROCESSOR_MODULE_PATH),
+                new OutputLocationHandler(StandardLocation.CLASS_OUTPUT, Option.D),
+                new OutputLocationHandler(StandardLocation.SOURCE_OUTPUT, Option.S),
+                new OutputLocationHandler(StandardLocation.NATIVE_HEADER_OUTPUT, Option.H),
+                new ModuleSourcePathLocationHandler(),
+                new PatchModulesLocationHandler(),
+                new ModulePathLocationHandler(StandardLocation.UPGRADE_MODULE_PATH, Option.UPGRADE_MODULE_PATH),
+                new ModulePathLocationHandler(StandardLocation.MODULE_PATH, Option.MODULE_PATH),
+                new SystemModulesLocationHandler(),
         };
 
         for (BasicLocationHandler h : handlers) {
@@ -2157,7 +2174,7 @@ public class Locations {
     }
 
     void setLocationForModule(Location location, String moduleName,
-            Iterable<? extends Path> files) throws IOException {
+                              Iterable<? extends Path> files) throws IOException {
         LocationHandler h = getHandler(location);
         if (h == null) {
             if (location.isOutputLocation()) {
